--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
   "bugs": {
     "url": "https://github.com/ErnestZiemkowski/chat/issues"
   },
-  "homepage": "https://github.com/ErnestZiemkowski/chat#readme"
+  "homepage": "https://github.com/ErnestZiemkowski/chat#readme",
+  "dependencies": {
+    "express": "^4.16.3",
+    "nodemon": "^1.18.3"
+  }
 }
